--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-context": "^1.0.20",
-    "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -18,6 +17,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-motion": "^0.2.6",
     "react-share": "^4.4.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
@@ -51,6 +51,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
     "graphql-request": "^4.0.0",
     "prettier": "^2.5.1"
   }
