--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-markdown": "^8.0.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
