--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweb",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-markdown": "^8.0.0",
+    "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
