--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-context": "^1.0.20",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "graphql": "^16.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
