--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Tickets!",
+  "short_name": "Tawanda",
+  "name": "Tawanda Munongo Website and Blog",
   "icons": [
     {
       "src": "favicon.ico",
