--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
     "react-markdown": "^8.0.0",
     "react-reveal": "^1.2.2",
