--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
